--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
     "element-plus": "^2.10.2",
     "express": "^5.1.0",
     "lodash": "^4.17.21",
